style.css
body, html {
    padding: 8px;
    background-color: #000000;
    color: #ffffff;
    font-family: "Inter", sans-serif;
    font-family: Arial, sans-serif;
    overflow:auto;
}
a {
    color: white;
}

.page-main-title-container{
    text-align: center;
    margin-top: 250px;
}
#page-main-title {
    text-align: center;
    font-size: 2.5rem;
}
#page-main-desc {
    text-align: center;
    font-size: 1.5rem;
    line-height: 130%;
}
.cover-embed{
    margin: 30px;
}



.cover-desc {
    margin-left: 8vw;
    margin-right: 8vw;
    justify-content: center;
    font-size: 1.5rem;
    line-height: 130%;
}

/* Navbar Styles */
header {
    width: 95vw;
    position: fixed;
    top: 0;
    z-index: 1000;
}
#app-logo-nav{
    border-radius: 50%;
    width: 50px;
    height: 50px;
}

.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px 20px;
}

.logo a {
    text-decoration: none;
    color: #fff;
    font-weight: bold;
}

.nav-links ul {
    list-style: none;
    display: flex;
    gap: 20px;
}

.nav-links ul li a {
    text-decoration: none;
    color: #fff;
    font-size: 1.2rem;
    font-weight: 400;
    transition: color 0.3s ease;
}

.nav-links ul li a:hover {
    color: #E7E0EC;
}

/* Hamburger Menu */
.hamburger-menu {
    user-select: none;
    display: none;
    flex-direction: column;
    cursor: pointer;
    gap: 5px;
    padding: 15px;
    z-index: 1001;
}

.hamburger-menu span {
    width: 25px;
    height: 3px;
    background: #fff;
    transition: all 0.3s ease;
}
.nav-social-link{
    display: none;
}

/* Media Queries for Mobile */
@media (max-width: 768px) {
    .nav-links {
        display: flex;
        align-items: center;
        justify-content: space-between;
        position: fixed;
        top: 0;
        right: 0;
        height: 100%;
        width: 100%;
        background-color: rgba(51, 51, 51, 0.9); /* Dark background with transparency */
        backdrop-filter: blur(10px); /* Blur effect */
        flex-direction: column;
        align-items: center;
        justify-content: center;
        transform: translateX(100%);
        transition: transform 0.3s ease-in-out;
    }

    .hamburger-menu {
        display: flex;
    }

    /* Drawer Open */
    .nav-links.active {
        display: flex;
        transform: translateX(0);
    }
    
    .nav-links ul {
        list-style: none;
        display: flex;
        flex-direction: column; /* Makes the list items vertical */
        gap: 20px;
        padding: 0;
        margin: 0;
        align-items: center;
    }
    .nav-social-link{
        display: flex;
    }
}

